# mistral-vibe

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  REVIEW_REPORT.md  jest.config.js  package.json  playwright.config.ts  pyproject.toml  snapshot_report.html  tsconfig.json  vibe-acp.spec
.github/ISSUE_TEMPLATE/: bug-report.yml
.github/workflows/: build-and-upload.yml  issue-labeler.yml  release.yml
distribution/zed/: extension.toml
docs/: README.md
scripts/: build_cython.py  bump_version.py  custom_precommit_check.sh  e2e-coverage.js  install.sh  prepare_release.py
tests/: conftest.py  test_agent_auto_compact.py  test_agent_backend.py  test_agent_observer_streaming.py  test_agent_read_image.py  test_agent_stats.py  test_agent_tool_call.py  test_agents.py  test_approval_app_auto_approve.py  test_approve_always_permanent.py  test_cli_programmatic_preload.py  test_ctrl_h_fix_verification.py  test_deferred_init.py  test_history_finder.py  test_history_manager.py  test_mcp_interruption.py  test_middleware.py  test_permission_store.py  test_prompt_enhancement.py  test_prompt_enhancement_cancellation.py  test_prompt_enhancement_integration.py  test_prompt_enhancement_interruption_reset.py  test_prompt_enhancement_loading_widget.py  test_reasoning_content.py  test_session_finder.py  test_session_finder_e2e.py  test_session_finder_focus.py  test_session_finder_integration.py  test_spinner_reset_prevention.py  test_system_prompt.py  test_todo_display_on_load.py  test_todo_persistence.py  test_todo_persistence_comprehensive.py  test_todo_save_restore.py  test_todo_save_restore_ui.py  test_tracing.py  test_turn_summary.py  test_ui_external_editor.py  test_ui_input_history.py  test_ui_pending_user_message.py  (+1 more)
tests/acp/: conftest.py  test_acp.py  test_acp_entrypoint_smoke.py  test_agent_thought.py  test_auth_status.py  test_authenticate.py  test_bash.py  test_close_session.py  test_commands.py  test_compact_session_updates.py  test_edit.py  test_edit_file.py  test_initialize.py  test_load_session.py  test_multi_session.py  test_new_session.py  test_proxy_setup_acp.py  test_read.py  test_read_file.py  test_search_replace.py  test_session_set_title.py  test_set_config_option.py  test_set_mode.py  test_set_model.py  test_telemetry_notification.py  test_tool_call_session_update.py  test_tool_field_meta.py  test_utils.py  test_write_file.py
tests/autocompletion/: test_file_indexer.py  test_path_prompt.py  test_slash_command_controller.py  test_ui_chat_autocompletion.py
tests/backend/: test_anthropic_adapter.py  test_backend.py  test_image_mapping.py  test_openai_adapter_prompt_progress.py  test_reasoning_adapter.py  test_ssl_integration.py  test_vertex_anthropic_adapter.py
tests/banner/: test_banner_initial_state.py
tests/browser_sign_in/: stubs.py  test_browser_sign_in.py  test_browser_sign_in_http.py
tests/cli/: smoke_binary.py  test_approval_app_grace_period.py  test_cli.py  test_cli_resume.py  test_clipboard.py  test_commands.py  test_compact_message.py  test_compact_summary_display.py  test_copy_shortcuts.py  test_entrypoint.py  test_history_manager.py  test_initial_agent_name.py  test_mcp_app.py  test_programmatic_setup.py  test_prompt_progress_e2e.py  test_queue_auto_submit.py  test_queue_management.py  test_queue_manager.py  test_rename_command.py  test_startup_update_prompt.py  test_terminal_setup.py  test_textual_ui_app.py  test_textual_ui_app_actions.py  test_textual_ui_app_actions_comprehensive.py  test_textual_ui_app_comprehensive.py  test_textual_ui_app_coverage.py  test_textual_ui_app_event_handlers.py  test_textual_ui_app_prompt_enhancement.py  test_textual_ui_app_simple_methods.py  test_tool_timer_display.py  test_translate_command.py  test_ui_clipboard_notifications.py  test_ui_load_more_after_prune.py  test_ui_session_incremental_renderer.py  test_ui_session_resume.py  test_ui_skill_dispatch.py  test_ui_teleport_availability.py  test_ui_theme_picker.py  test_web_notifications.py
tests/core/: test_add_dir.py  test_agent_loop_progress.py  test_agent_loop_resume.py  test_agents.py  test_auth_github.py  test_build_ssl_context.py  test_code_server_manager.py  test_compaction.py  test_config_builder.py  test_config_exclude_defaults.py  test_config_layer.py  test_config_orchestrator.py  test_config_paths.py  test_config_resolution.py  test_edit_file_encoding.py  test_environment_layer.py  test_file_logging.py  test_local_config_files.py  test_local_config_walk.py  test_message_handler.py  test_message_utils.py  test_overrides_layer.py  test_plan_session.py  test_project_config_layer.py  test_proxy_setup.py  test_remote_agent_loop.py  test_retry.py  test_retry_events.py  test_rewind_integration.py  test_slug.py  test_telemetry_send.py  test_teleport_experimental_nuage.py  test_teleport_git.py  test_teleport_nuage.py  test_teleport_service.py  test_teleport_telemetry.py  test_tool_call_loop_detection.py  test_trusted_folders.py  test_types.py  test_ui_events.py  (+2 more)
tests/e2e/: common.py  conftest.py  test_cli_tui_fresh_install.py  test_cli_tui_streaming.py  test_cli_tui_tool_approval.py  test_edit_last_message.py  test_webui_login.py
tests/js/: api-client.test.js  app.test.js  collapse-state.test.js  event-handling.test.js  image-attachment.test.js  message-streamer.test.js  notification.test.js  question-handler.test.js  scroll-utils.test.js  setup-notifications.js  slash-commands.test.js  structured-renderer.test.js  tool-formatters.test.js  tool-output-formatting.test.js  tool-timer.test.js  vibe-client.test.js  websocket-client.test.js
tests/mock/: utils.py
tests/narrator_manager/: test_narrator_manager.py
tests/onboarding/: test_run_onboarding.py  test_ui_onboarding.py
tests/prompt_enhancement/: test_prompt_enhancement_ui.py
tests/session/: test_resume_sessions.py  test_saved_sessions.py  test_session_loader.py  test_session_logger.py
tests/skills/: test_manager.py
tests/snapshots/: base_snapshot_test_app.py  conftest.py  test_ui_snapshot_feedback_bar.py  (+19 more)
vibe/: __init__.py  whats_new.md
(+437 files in other folders)
