[project]
name = "mistral-vibe"
version = "2.11.0"
description = "Minimal CLI coding agent by Mistral"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Mistral AI" }]
keywords = [
    "ai",
    "cli",
    "coding-assistant",
    "mistral",
    "llm",
    "developer-tools",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "agent-client-protocol==0.9.0",
    "anyio==4.13.0",
    "cachetools==7.0.6",
    "cairosvg>=2.7.0",
    "certifi==2026.4.22",
    "charset-normalizer==3.4.7",
    "Pillow>=10.0.0",
    "cryptography==47.0.0",
    "fastapi>=0.115.0",
    "gitpython==3.1.47",
    "giturlparse==0.14.0",
    "google-auth==2.49.2",
    "httpx==0.28.1",
    "jinja2>=3.1.6",
    "json-repair>=0.30.0",
    "jsonpatch==1.33",
    "keyring==25.7.0",
    "markdownify==1.2.2",
    "markitdown[pdf]>=0.1.0",
    "mcp==1.27.0",
    # "mistralai==2.4.4",  # quarantined on PyPI - commented out; restore when unquarantined
    "opentelemetry-api==1.39.1",
    "opentelemetry-exporter-otlp-proto-http==1.39.1",
    "opentelemetry-sdk==1.39.1",
    "opentelemetry-semantic-conventions==0.60b1",
    "packaging==26.2",
    "pexpect==4.9.0",
    "pydantic==2.13.3",
    "pydantic-settings==2.14.0",
    "pyperclip==1.11.0",
    "python-dotenv==1.2.2",
    "pyyaml==6.0.3",
    "requests==2.33.1",
    "rich==15.0.0",
    "sounddevice==0.5.5",
<<<<<<<
    "soupsieve==2.8.3",
    "sse-starlette==3.4.1",
    "starlette==1.0.0",
    "textual==8.2.7",
=======
    "textual==8.2.4",
>>>>>>>
    "textual-speedups==0.2.1",
    "tomli-w==1.2.0",
    "tomlkit>=0.14.0",
    "tree-sitter==0.25.2",
    "tree-sitter-bash==0.25.1",
    "uvicorn>=0.41.0",
    "watchfiles==1.1.1",
    "websockets==16.0",
    "zstandard==0.25.0",
]

[project.urls]
Homepage = "https://github.com/mistralai/mistral-vibe"
Repository = "https://github.com/mistralai/mistral-vibe"
Issues = "https://github.com/mistralai/mistral-vibe/issues"
Documentation = "https://github.com/mistralai/mistral-vibe#readme"

[build-system]
requires = ["hatchling", "hatch-vcs", "editables", "Cython>=3.0.0", "setuptools", "hatch-build-scripts"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
include = ["vibe/"]
ignore-vcs = true
exclude = [
    "**/.gitignore",
    "**/__pycache__/",
    "**/*.pyc",
    "**/*.pyo",
    "**/build/",
]

[[tool.hatch.build.hooks.build-scripts.scripts]]
commands = ["python scripts/build_cython.py"]

[project.scripts]
vibe = "vibe.cli.entrypoint:main"
vibe-acp = "vibe.acp.entrypoint:main"


[tool.uv]
exclude-newer = "7 days"
exclude-newer-package = { agent-client-protocol = false, mistralai = false, textual = false }

package = true
required-version = ">=0.8.0"


[dependency-groups]
dev = [
    "debugpy>=1.8.19",
    "pre-commit>=4.2.0",
    "pyinstrument>=5.1.2",
    "pyright>=1.1.403",
    "pytest>=8.3.5",
    "pytest-asyncio>=1.2.0",
    "pytest-textual-snapshot>=1.1.0",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.8.0",
    "playwright>=1.40.0",
    "respx>=0.22.0",
    "ruff>=0.14.5",
    "tomlkit>=0.13.0",
    "twine>=5.0.0",
    "typos>=1.34.0",
    "vulture>=2.14",
    "debugpy>=1.8.19",
    "coverage>=7.13.2",
    "pytest-cov>=7.0.0",
    "import-linter>=2.11",
]

build = [
    "altgraph==0.17.5",
    "macholib==1.16.4 ; sys_platform == 'darwin'",
    "packaging==26.2",
    "pefile==2024.8.26 ; sys_platform == 'win32'",
    "pyinstaller==6.20.0",
    "pyinstaller-hooks-contrib==2026.4",
    "pywin32-ctypes==0.2.3 ; sys_platform == 'win32'",
    "setuptools==82.0.1",
    "truststore==0.10.4",
]

[tool.importlinter]
root_package = "vibe"
exclude_type_checking_imports = true

# core は acp を依存してはいけない
[[tool.importlinter.contracts]]
name = "Core has no dependencies on ACP"
type = "forbidden"
source_modules = ["vibe.core.*"]
forbidden_modules = ["vibe.acp.*"]

# core は cli を依存してはいけない（terminal_detect 依存のみ許可）
[[tool.importlinter.contracts]]
name = "Core has no dependencies on CLI"
type = "forbidden"
source_modules = ["vibe.core.*"]
forbidden_modules = ["vibe.cli.*"]
ignore_imports = [
    "vibe.core.agent_loop -> vibe.cli.terminal_detect",
    "vibe.core.experiments.session -> vibe.cli.terminal_detect",
]

# cli/acp は互いに依存してはいけない
[[tool.importlinter.contracts]]
name = "CLI and ACP are independent"
type = "forbidden"
source_modules = ["vibe.cli.*"]
forbidden_modules = ["vibe.acp.*"]

[tool.pyright]
pythonVersion = "3.12"
reportMissingTypeStubs = false
reportPrivateImportUsage = false

include = ["vibe/**/*.py", "tests/**/*.py"]
exclude = ["pyinstaller/"]
venvPath = "."
venv = ".venv"

[tool.ruff]
include = ["vibe/**/*.py", "tests/**/*.py"]
exclude = ["pyinstaller/"]
line-length = 88
target-version = "py312"
preview = true

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = [
    "F",
    "I",
    "D2",
    "UP",
    "TID",
    "ANN",
    "PLR",
    "B0",
    "B905",
    "DOC102",
    "RUF022",
    "RUF010",
    "RUF012",
    "RUF019",
    "RUF100",
]
ignore = ["D203", "D205", "D213", "ANN401", "PLR6301"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "PLR"]


[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.isort]
known-first-party = ["vibe"]
force-sort-within-sections = true
split-on-trailing-comma = false
combine-as-imports = true
force-wrap-aliases = false
order-by-type = true
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.pylint]
max-public-methods = 26
max-positional-args = 10
max-statements = 50
max-branches = 15
max-locals = 15
max-args = 10
max-returns = 6
max-nested-blocks = 5

[tool.vulture]
ignore_decorators = ["@*"]

[tool.pytest.ini_options]
addopts = "-vvvv -q -n auto --durations=10 --import-mode=importlib --maxschedchunk=1"
timeout = 120
filterwarnings = [
    # (e2e) streaming mock server is started in a thread; and the cli is spawn in a fork
    "ignore:This process \\(pid=.*\\) is multi-threaded, use of forkpty\\(\\) may lead to deadlocks in the child\\.:DeprecationWarning",
]

[tool.pytest-playwright]
# Disable playwright's base_url fixture to avoid conflict with pytest-base-url
base_url = ""
